try to fix problem on iphone safari with css addition on input field

--- a/static/App.css
+++ b/static/App.css
@@ -102,3 +102,11 @@ a {
 /*.recipe-image {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }*/
+
+input, textarea {
+  -webkit-user-select: text;
+  -khtml-user-select: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
+  user-select: text;
+}
